--- a/fg/partials/ace-frame.html
+++ b/fg/partials/ace-frame.html
@@ -1,4 +1,4 @@
-<iframe src="{{src}}" width="{{width}}px" height="{{height}}px" frameBorder="0" scrolling="no" style="margin-bottom: 30px; margin-top: 30px;">
+<iframe src="{{src}}" width="{{width}}px" height="{{height}}px" frameBorder="0" scrolling="no" align="middle" style="margin-bottom: 30px; margin-top: 30px;">
 
   <h4> Unsupported iframes </h4>
 			
