--- a/fg/partials/group-chooser.html
+++ b/fg/partials/group-chooser.html
@@ -1,11 +1,11 @@
-<div style="display: inline-block;"> <!-- style="margin-bottom: 20px;margin-right: 20px;margin-left: 56px" -->
+<div style="display: inline-block;">
 	
-	<div style="display: inline-block;" ng-if="adding">
+	<div style="display: inline-block;" ng-if="(adding || groups.length <= 1)">
 		<group-validator ev="events" group="validating" time="1750"> </group-validator>
 		<button class="browser-style" ng-click="addGroup(validating)" ng-disabled="disabled_btns"> Add group </button>
-		<button class="browser-style" ng-click="cancelAdd()" ng-disabled="disabled_btns"> Cancel </button>
+		<button ng-if="groups.length > 1" class="browser-style" ng-click="cancelAdd()" ng-disabled="disabled_btns"> Cancel </button>
 	</div>
 	
-	<select ng-if="!adding" class="browser-style" ng-model="current" ng-options="group for group in groups track by group" ng-change="selectChange(current)"></select>
+	<select ng-if="(!adding && groups.length > 1)" class="browser-style" ng-model="current" ng-options="group for group in groups track by group" ng-change="selectChange(current)"></select>
 	
 </div>
