--- a/fg/partials/resource-dir.html
+++ b/fg/partials/resource-dir.html
@@ -1,6 +1,6 @@
 <label for="directory-{{name}}" style="display: inline;">
 	
-	<strong style="margin:5px 0 5px 0;"> {{name}} 
+	<strong style="margin:5px 0 5px 0;"> {{displayName()}} 
 		<drop-down shown="'dir_shown'" width="16" height="16"></drop-down>
 	</strong>
 	
@@ -9,14 +9,14 @@
 		<li ng-class="resource.items ? 'browser-style resource-dir' : 'browser-style resource-item'" ng-repeat="resource in items">
 
 			<resource-item resource="resource" ng-if="!resource.items"></resource-item>
-			<resource-directory ng-if="resource.items" items="resource.items" name="resource.name" parent="path" mgr="mgr"></resource-directory>
+			<resource-directory ng-if="resource.items" items="resource.items" name="resource.name" mgr="mgr"></resource-directory>
 			
 		</li>
 	</ul>
 
 	<div style="display: table-row-group;">
 		<div ng-show="dir_shown && !adding" class="resource-add" ng-click="addItem()" ng-mouseover="setHover(true);" ng-mouseleave="setHover(false);"> + </div>
-		<div ng-show="dir_shown && !adding && onadding" class="resource-add" ng-click="removeSelf()" ng-mouseover="setHover(true);" ng-mouseleave="setHover(false);"> - </div>
+		<div ng-if="name != '/'" ng-show="dir_shown && !adding && onadding" class="resource-add" ng-click="removeSelf()" ng-mouseover="setHover(true);" ng-mouseleave="setHover(false);"> - </div>
 	</div>
 	
 	<div ng-show="adding">
