--- a/fg/partials/resource-item.html
+++ b/fg/partials/resource-item.html
@@ -1,5 +1,5 @@
 <div style="display: table-row-group;" ng-mouseover="setHover(true);" ng-mouseleave="setHover(false);">
-	<bdi ng-show="!editing" style="vertical-align: super;padding-right: 15px;"> {{ resource.name }} <i> ({{ resource.type }}) </i>
+	<bdi ng-show="!editing" style="vertical-align: super;padding-right: 15px;"> {{ displayName() }} <i> ({{ resource.type }}) </i>
 
 		<div style="margin-left: 15px;display: inline-flex;">
 			
