--- a/fg/partials/resource-item.html
+++ b/fg/partials/resource-item.html
@@ -47,9 +47,9 @@
 		<button
 			class="browser-style"
 			ng-click="cancelEdit()">
-			Cancel
+			Close
 		</button>
-
+		
 		<button
 			ng-disabled="!validated && !have_file"
 			class="browser-style"
