--- a/fg/partials/resource-dir.html
+++ b/fg/partials/resource-dir.html
@@ -28,12 +28,12 @@
 			ng-change="selectItemType(item_type)"></select>
 		
 		<div style="display: inline;">
-
-			<!-- style="width: 15%;" -->
+			
 			<input
 				id="{{idname}}"
 				class="browser-style"
 				type="text"
+				ng-disabled="in_progress"
 				ng-show="item_type == 'directory'"
 				ng-model="new_name"/>
 				
@@ -52,8 +52,7 @@
 				ng-file-selected="resourceFile(file)"
 				text="'Import Resource'">
 			</input-file>
-
-
+			
 			<img src="../icons/ko_tick.png"
 				width="22px"
 				height="22px"
