--- a/fg/partials/resource-dir.html
+++ b/fg/partials/resource-dir.html
@@ -46,10 +46,9 @@
 			</button>
 
 			<input-file
-				file="'file'"
 				style="margin: 0 5px 0 5px"
 				ng-if="item_type == 'file'"
-				ng-file-selected="resourceFile(file)"
+				ng-file-selected="resourceFile"
 				text="'Import Resource'">
 			</input-file>
 			
