--- a/fg/editor/editor.css
+++ b/fg/editor/editor.css
@@ -163,13 +163,12 @@ body {
 	
 }
 
-#dropdown-header {
+.dropdown-header {
 
 	position: absolute;
 	top: 0;
 	right: 0;
 	z-index: 99999999;
-	color: red;
 	margin-right: 15px;
 	margin-top: 15px;
 	-moz-transform: scaleX(-1);
