--- a/fg/styles/jsl.css
+++ b/fg/styles/jsl.css
@@ -49,7 +49,6 @@
 	color: #a3a3c2;
 	font-size: 250%;
 	text-align: center;
-	/* padding-top: 10%; */
 	padding-bottom: 10%;
 }
 
@@ -109,6 +108,7 @@ span.checkmark {
     background-color: inherit;
     color: #017b5f;
     border: 2px solid #666;
+	cursor: pointer;
 }
 
 span.checkmark:hover {
