Minor tweakering, couple of tasks done

--- a/fg/styles/jsl.css
+++ b/fg/styles/jsl.css
@@ -152,3 +152,9 @@ td.page-ref-small {
 	text-align: center;
 
 }
+
+bdi.clickable-domain:hover {
+
+	text-decoration: underline;
+	cursor: pointer;
+}
