--- a/fg/partials/resource-item.html
+++ b/fg/partials/resource-item.html
@@ -1,4 +1,6 @@
-<div style="display: inline; width: 100%;" ng-mouseover="setHover(true);" ng-mouseleave="setHover(false);">
+<div style="display: inline; width: 100%;" ng-mouseover="setHover(true);" class="caca" ng-mouseleave="setHover(false);" draggable="true"
+	ondragstart="angular.element(this).scope().$$childHead.dragStart(event);"> <!-- To be solved -->
+	
 	<bdi ng-show="!editing" style="vertical-align: super;padding-right: 15px;"> {{ displayName() }} <i> ({{ resource.size }}) </i>
 
 		<div style="margin-left: 15px;display: inline-flex;">
