--- a/fg/partials/resource-dir.html
+++ b/fg/partials/resource-dir.html
@@ -9,8 +9,8 @@
 			
 			<li ng-class="resource.items ? 'browser-style resource-dir' : 'browser-style resource-item'" ng-repeat="resource in items">
 
-				<resource-item resource="resource" ng-if="!resource.items"></resource-item>
-				<resource-directory ng-if="resource.items" items="resource.items" name="resource.name" mgr="mgr"></resource-directory>
+				<resource-directory ng-if="resource.items" items="resource.items" name="resource.name" mgr="mgr" events="events"></resource-directory>
+				<resource-item resource="resource" ng-if="!resource.items" events="events"></resource-item>
 				
 			</li>
 		</ul>
