--- a/fg/partials/resource-dir.html
+++ b/fg/partials/resource-dir.html
@@ -9,8 +9,8 @@
 			
 			<li ng-class="resource.items ? 'browser-style resource-dir' : 'browser-style resource-item'" ng-repeat="resource in items">
 
-				<resource-item resource="resource" ng-if="!resource.items" events="events"></resource-item>
-				<resource-directory ng-if="resource.items" items="resource.items" name="resource.name" mgr="mgr" events="events"></resource-directory>
+				<resource-item resource="resource" ng-if="!resource.items" events="events" locale="locale"></resource-item>
+				<resource-directory ng-if="resource.items" items="resource.items" name="resource.name" mgr="mgr" events="events" locale="locale"></resource-directory>
 				
 			</li>
 		</ul>
@@ -25,7 +25,7 @@
 			<select
 				class="browser-style"
 				ng-model="item_type"
-				ng-options="type for type in ['directory', 'file']"
+				ng-options="type for type in [locale.findText('dir'), locale.findText('file')]"
 				ng-change="selectItemType(item_type)"></select>
 			
 			<div style="display: inline;">
@@ -35,22 +35,22 @@
 					class="browser-style"
 					type="text"
 					ng-disabled="in_progress"
-					ng-show="item_type == 'directory'"
+					ng-show="locale.findText('dir')"
 					ng-model="new_name"/>
 				
 				<button
 					style="margin: 0 5px 0 5px"
 					class="browser-style"
-					ng-if="item_type == 'file'"
+					ng-if="item_type == locale.findText('file')"
 					ng-click="editTextResource()">
-					Edit Resource
+					{{ locale.findText('edit_res') }}
 				</button>
 
 				<input-file
 					style="margin: 0 5px 0 5px"
-					ng-if="item_type == 'file'"
+					ng-if="item_type == locale.findText('file')"
 					ng-file-selected="resourceFile"
-					text="'Import Resource'">
+					text="locale.findText('import_res')">
 				</input-file>
 				
 				<img src="../icons/ko_tick.png"
@@ -62,7 +62,7 @@
 				<img src="../icons/ok_tick.png"
 					width="20px"
 					height="20px"
-					ng-show="item_type == 'directory'"
+					ng-show="item_type == locale.findText('dir')"
 					ng-click="newDir()"
 					style="vertical-align: sub; margin-left: 15px;display: inline;"/>
 				
