--- a/fg/styles/jsl.css
+++ b/fg/styles/jsl.css
@@ -1,23 +1,27 @@
 .ddbutton-shown {
-	
+
+	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
 	vertical-align: text-bottom;
 }
 
 .ddbutton-shown:hover {
-	
+
+	-webkit-transform: rotate(-90deg);
 	-moz-transform: rotate(-90deg);
 	
 }
 
 .ddbutton-hidden {
-	
+
+	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
 	vertical-align: text-bottom;
 }
 
 .ddbutton-hidden:hover {
 
+	-webkit-transform: rotate(90deg);
 	-moz-transform: rotate(90deg);
 
 }
