--- a/fg/partials/resource-dir.html
+++ b/fg/partials/resource-dir.html
@@ -54,12 +54,14 @@
 				</input-file>
 				
 				<img src="../icons/ko_tick.png"
+					class="ticks"
 					width="22px"
 					height="22px"
 					ng-click="cancelResource()"
 					style="vertical-align: sub; margin-left: 15px;display: inline;"/>
 				
 				<img src="../icons/ok_tick.png"
+					class="ticks"
 					width="20px"
 					height="20px"
 					ng-show="item_type == locale.findText('dir')"
