fixed unsafe: images, several bugs fixed

--- a/fg/styles/jsl.css
+++ b/fg/styles/jsl.css
@@ -189,3 +189,11 @@ div.origin-mark-sm {
 div.origin-mark-sm:hover {
 	cursor: pointer;
 }
+
+bdi.selectable {
+	
+	-webkit-user-select: all;
+	-moz-user-select: all;     
+	user-select: all;
+
+}
